update npm commands, add notes

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,31 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Pokémon TCG Search Page</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Tags for search engines ... -->
+  <meta name="keywords" content="Pokémon, TCG, Trading Card Game, Search Engine, Angular">
+  <meta name="description" content="A Pokemon - Trading Card Game - search engine.">
+  <meta name="page-topic" content="Game, Cards, Card Games">
+  <meta name="copyright" content="(c) Daniel Panster">
+  <meta name="robots" content="index,follow">
+  <meta name="audience" content="all">
+  <meta name="revisit-after" content="2 days">
+  <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+  <!-- <meta name="google-site-verification" content="jOHQucAGXnWpOC_Km346NfgxGqdRai8DyEW5LeXAKps" /> -->
+
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
